# optparse-applicative-minimal

./: .gitignore  README.md  optparse-applicative-minimal.cabal
src/: Main.hs
