name:                optparse-applicative-minimal
version:             0.1.0.0
synopsis:            Minimal example to test optparse-applicative package
description:         Please see README.md
homepage:            http://github.com/gerritwalther/optparse-applicative-minimal.git
license:             GPL
license-file:        LICENSE
author:              Gerrit Walther
--maintainer:
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable new-template-exe
    hs-source-dirs:      src
    main-is:             Main.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base                    >= 4.7      && < 4.9,
        optparse-applicative    >= 0.11     && < 0.12,
        transformers            >= 0.3.0.0  && < 0.4
    default-language:    Haskell2010

source-repository head
  type:     git
  location: http://github.com/gerritwalther/optparse-applicative-minimal.git
